[tool.poetry]
name = "radio_info"
version = "0.1.0"
description = ""
authors = ["Nik <sch-nikolaj@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.21"
python-dotenv = "^0.20.0"
selenium = "^4.3.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
SpeechRecognition = "^3.8.1"
pydub = "^0.25.1"
schedule = "^1.1.0"
webdriver-manager = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
